2011-05-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m:
	Fixe to resolve links and standardize path to current executable.

2011-05-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m:
	Fixes for encoding quoted-printable document body content.

2011-05-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortCoder.m:
	* Source/NSMethodSignature.m:
	* Source/GSFFCallInvocation.m:
	* Source/GSFFIInvocation.m:
	* Source/NSUnarchiver.m:
	* Source/NSCoder.m:
	* Source/cifframe.m:
	* Source/Additions/GSObjCRuntime.m:
	* Source/NSConnection.m:
	* Source/NSData.m:
	* Source/NSObjCRuntime.m:
	* Source/NSArchiver.m:
	Fixup objc header includes for gcc-4.6

2011-05-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m:
	* Source/GSHTTPURLHandle.m:
	* Source/win32/NSMessagePort.m:
	* Source/win32/NSMessagePortNameServer.m:
	Include/use errno.h for thread-safe errno support.

2011-05-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortCoder.m:
	* Source/GSConcreteValueTemplate.m:
	* Source/GSFFCallInvocation.m:
	* Source/NSKeyedUnarchiver.m:
	* Source/GSFFIInvocation.m:
	* Source/NSUnarchiver.m:
	* Source/NSCoder.m:
	* Source/NSURL.m:
	* Source/cifframe.m:
	* Source/NSConnection.m:
	* Source/NSData.m:
	* Source/NSObjCRuntime.m:
	* Source/GSValue.m:
	* Source/NSValue.m:
	* Source/NSArchiver.m:
	updates for old/new objc api change.

2011-05-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSArray.m: Fix keyed decoding for GSMutableArray and
	GSPlaceholderArray.

2011-05-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: treat unknown/undefined encodings as utf-8
	so we tolerate bad xml documents better.

2011-05-02  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/Additions/GSObjCRuntime.m (GSSelectorFromNameAndTypes):
	With gcc 4.6 libobjc, GSSelectorFromNameAndTypes was calling some
	functions like sel_get_any_typed_uid that were not declared (they're